force-app/main/default/objects/animalos__Animal_Condition__c/animalos__Animal_Condition__c.object-meta.xml
<CustomObject>
    <label>Animal Condition</label>
    <nameField>
        <displayFormat>AC{00000}</displayFormat>
        <label>Animal Condition ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Animal Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>