force-app/main/default/objects/animalos__Animal_Condition__c/fields/animalos__Animal__c.field-meta.xml
<CustomField>
    <fullName>animalos__Animal__c</fullName>
    <label>Animal</label>
    <referenceTo>animalos__Animal__c</referenceTo>
    <relationshipLabel>Animal Conditions</relationshipLabel>
    <relationshipName>Animal_Conditions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>