force-app/main/default/objects/animalos__Animal_Condition__c/fields/animalos__Condition__c.field-meta.xml
<CustomField>
    <fullName>animalos__Condition__c</fullName>
    <label>Condition</label>
    <referenceTo>animalos__Condition__c</referenceTo>
    <relationshipLabel>Animal Conditions</relationshipLabel>
    <relationshipName>Animal_Conditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>