force-app/main/default/objects/animalos__Animal_Condition__c/fields/animalos__Condition_Type__c.field-meta.xml
<CustomField>
    <fullName>animalos__Condition_Type__c</fullName>
    <formula>TEXT(animalos__Condition__r.animalos__Condition_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Condition Type</label>
    <type>Text</type>
</CustomField>